[scheduler] Delay budget-based throttling for 10s after backgrounded.

Delay the start of background budget-based  timer throttling for 10s after
page is backgrounded to deal with long navigation-related blocking IPCs.

R=alexclarke@chromium.org,skyostil@chromium.org
BUG=671814

Review-Url: https://codereview.chromium.org/2557713007
Cr-Commit-Position: refs/heads/master@{#437262}

Former-commit-id: c1fe2cb61120dcfc2eead782a96649f3e22b28c3